--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pytz = "^2025.1"
 motor = "^3.7.0"
 pymongo = "^4.13.2"
+websockets = "^12.0"
 
 [build-system]
 requires = ["poetry-core"]
